# cr-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: cr.cpp  cr.h  lib.rs
src/cxx/: cr.cpp  cr.hpp
